<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/entryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_date" />

        <EditText
            android:id="@+id/editEntryDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:editable="false"
            android:gravity="center"
            android:minLines="2"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnGetToday"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/get_today" />

    <Button
        android:id="@+id/btnCalcExpire"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/calc_expire" />

    <TextView
        android:id="@+id/expireResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/entryUserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_userid" />

        <EditText
            android:id="@+id/editEntryUserId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:editable="false"
            android:numeric="integer"
            android:minLines="2"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/entryUserNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_usernote" />

        <EditText
            android:id="@+id/editEntryUserNote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minLines="2" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_expire" />

</LinearLayout>